--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,7 +27,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install mdBook
-        run: cargo install mdbook@${MDBOOK_VERSION}
+        run: |
+           curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
+           rustup update
+           cargo install --version ${MDBOOK_VERSION} mdbook
       - id: pages
         uses: actions/configure-pages@v5
       - run: mdbook build
